// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stats/> componentDidMount() should create a notification (server error) when fetching stats fails 1`] = `
Array [
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should create a notification (server error) when fetching stats fails: stats should be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
}
`;

exports[`<Stats/> componentDidMount() should create a notification (unknown error) when fetching stats fails 1`] = `
Array [
  Array [
    Object {
      "status": "error",
      "title": "Failed to retrieve statistic. Please retry in a few seconds.",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Failed to retrieve statistic. Please retry in a few seconds.",
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should create a notification (unknown error) when fetching stats fails: stats should be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
}
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state 1`] = `
Array [
  Array [
    Object {
      "resourceName": "tickets-created-per-channel-per-day",
      "statName": "tickets-created-per-channel-per-day",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-created-per-channel",
      "statName": "tickets-created-per-channel",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state: should contain data of stats and be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
}
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state: should contain loading stats 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": true,
    "tickets-created-per-channel": true,
  },
}
`;

exports[`<Stats/> componentDidUpdate should fetch stats when filters change 1`] = `
Array [
  Array [
    Object {
      "resourceName": "tickets-created-per-channel-per-day",
      "statName": "tickets-created-per-channel-per-day",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-created-per-channel",
      "statName": "tickets-created-per-channel",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-created-per-channel-per-day",
      "statName": "tickets-created-per-channel-per-day",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-created-per-channel",
      "statName": "tickets-created-per-channel",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
]
`;

exports[`<Stats/> componentDidUpdate should fetch stats when filters change: should contain data of stats and be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": false,
    "tickets-created-per-channel": false,
  },
}
`;

exports[`<Stats/> componentDidUpdate should fetch stats when filters change: should contain loading stats 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-created-per-channel-per-day": true,
    "tickets-created-per-channel": true,
  },
}
`;

exports[`<Stats/> componentDidUpdate should fetch stats when view parameter change 1`] = `
Array [
  Array [
    Object {
      "resourceName": "tickets-created-per-channel-per-day",
      "statName": "tickets-created-per-channel-per-day",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-created-per-channel",
      "statName": "tickets-created-per-channel",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-closed-per-agent-per-day",
      "statName": "tickets-closed-per-agent-per-day",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
  Array [
    Object {
      "resourceName": "tickets-closed-per-agent",
      "statName": "tickets-closed-per-agent",
      "value": Object {
        "data": Object {
          "data": Object {
            "axes": Object {
              "x": Array [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Array [],
            },
            "lines": Array [
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              Object {
                "data": Array [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": Object {
            "axes": Object {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": Object {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
  ],
]
`;

exports[`<Stats/> componentDidUpdate should fetch stats when view parameter change: should contain data of stats and be marked as not loading 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-closed-per-agent-per-day": false,
    "tickets-closed-per-agent": false,
  },
}
`;

exports[`<Stats/> componentDidUpdate should fetch stats when view parameter change: should contain loading stats 1`] = `
Object {
  "fetchingStates": Immutable.Map {
    "tickets-closed-per-agent-per-day": true,
    "tickets-closed-per-agent": true,
  },
}
`;

exports[`<Stats/> render() should not render stats because there is no stat to render and it's not fetching stats 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`<Stats/> render() should render stats 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`<Stats/> render() should render stats as loading 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <withRouter(Connect(StatContainer))
      loading={true}
      name="tickets-created-per-channel-per-day"
    />
  </div>
  <div
    key="1"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <withRouter(Connect(StatContainer))
      loading={true}
      name="tickets-created-per-channel"
    />
  </div>
</div>
`;
